Fixes X button z-index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -752,4 +752,5 @@ label {
   height: 60px;
   background: #c0392b;
 	font-size: 36pt;
+	z-index: 210;
 }
